[package]
name = "xdsim-dummy-t-flip-flop-gate"
version = "0.1.1"
edition = "2024"

[dependencies]
libxdsim = { git = "https://github.com/25cst/libxdsim" }
# libxdsim = { path = "../libxdsim/" }
xdsim-dummy-bit-data = { git = "https://github.com/25cst/xdsim-dummy-bit-data" }
# xdsim-dummy-bit-data = { path = "../xdsim-dummy-bit-data/" }

[lib]
crate-type = ["cdylib"]

[features]
export-abi = []
